# edgeml-recommender

./: .gitattributes  .gitignore  .gitmodules  Cargo.toml  LICENSE  README.md  SECURITY.md
data/clusters/: combined.bincode
data/embeddings/: combined.json
data/precompiled/: centroids-map.bincode
met-example/: .gitignore  README.md  fastly.toml  package-lock.json  package.json
met-example/src/: index.js  met-api.js  recommender.js  responses.js  session.js  stream-transform.js
met-example/src/assets/: client.css  client.js
precompiler/: Cargo.toml
precompiler/src/: main.rs
recommender/: Cargo.toml  README.md  fastly.toml
recommender/src/: common.rs  helpers.rs  main.rs  recommender_kv.rs  recommender_otf.rs  vec_db.rs
scripts/: create-embeddings.py  partition.py  preprocess.py  requirements.txt  upload-to-kv-store.sh
