[package]
name = "recommender"
version = "0.1.0"
edition = "2021"
publish = false

[profile.release]
debug = 1

[dependencies]
fastly = "0.10.1"
serde_json = "1.0.118"
serde = { version = "1.0.203", features = ["derive"] }
serde_with = "3.8.1"
instant-distance = { version = "0.6.1", features = ["serde", "serde-big-array"] }
rand = "0.8.5"
once_cell = "1.19.0"
bincode = "1.3.3"

[lib]
name = "recommender"
path = "src/common.rs" 
